kubernetes/flask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask
  labels:
    name: flask
spec:
  replicas: 1
  selector:
    matchLabels:
      name: flask
  template:
    metadata:
      labels:
        name: flask
        app: flask
    spec:
      containers:
      - name: flask
        image: kondinskis/typ-api:latest
        imagePullPolicy: Never
      restartPolicy: Always
